--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "test": "playwright test",
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@playwright/test": "^1.48.0",
+    "@types/node": "^22.7.5",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
